--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="rock-paper-scissors.js" defer></script>
 </head>
 <body>
-    <script src="rock-paper-scissors.js"></script>
+    <div id="header">
+        <h1>Rock Paper Scissors</h1>
+    </div>
+    <div id="game">
+        <button class="start">Start</button>
+    </div>
 </body>
 </html>
